add login, logout func. add jwt midleware
