# backend/internal/models/user.go
@@ -1,0 +1,7 @@
+package models
+
+type User struct {
+	ID       string `bson:"_id,omitempty"`
+	Username string `bson:"username,unique"`
+	Password string `bson:"password"`
+}
